--- a/index.html
+++ b/index.html
@@ -88,14 +88,32 @@
     .c-return .iconfont {
       font-size: 20px;
     }
+    .c-screen__shoot .iconfont {
+      font-size: 20px;
+    }
     .c-pencil:hover .c-tool{
       visibility: unset;
       transform: translate3d(0,-22px,0);
+    }
+    .m-screen__btn {
+      outline: none;
+      border: none;
+      padding: 3px 10px;
+      border-radius: 6px;
+      background: #fff;
+      color: #444;
+      border: 1px solid #444;
+      position: absolute;
+      right: 10%;
+      top: 50%;
+      transform: translateY(-50%);
+      cursor: pointer;
     }
   </style>
 </head>
 <body>
   <canvas width="600" height="600"></canvas>
+  <button class="m-screen__btn">截图</button>
   <div class="c-tool__box">
     <div class="c-erea c-pencil">
       <i class="iconfont">&#xe61e;</i>
@@ -116,6 +134,9 @@
     </div>
     <div class="c-recover c-erea">
       <i class="iconfont">&#xe638;</i>
+    </div>
+    <div class="c-screen__shoot c-erea">
+      <i class="iconfont">&#xe607;</i>
     </div>
   </div>
   <script src="./index.js"></script>
